--- a/EventPassByResponder/HomeView/HomeView.xib
+++ b/EventPassByResponder/HomeView/HomeView.xib
@@ -30,7 +30,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="91Q-yS-fes">
                     <rect key="frame" x="20" y="110" width="374" height="100"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h1u-K5-Lyn">
+                        <button opaque="NO" tag="1002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h1u-K5-Lyn">
                             <rect key="frame" x="165" y="28" width="44" height="44"/>
                             <color key="backgroundColor" red="0.078431372550000003" green="0.52941176469999995" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
@@ -40,8 +40,11 @@
                             <state key="normal" title="2">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="menuButtonClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="BzN-aD-Gh5"/>
+                            </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jf4-So-R1o">
+                        <button opaque="NO" tag="1001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jf4-So-R1o">
                             <rect key="frame" x="20" y="28" width="44" height="44"/>
                             <color key="backgroundColor" red="0.078431372550000003" green="0.52941176469999995" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
@@ -53,8 +56,11 @@
                             <state key="normal" title="1">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="menuButtonClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="dDw-zL-Vtr"/>
+                            </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RrR-kN-jP8">
+                        <button opaque="NO" tag="1003" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RrR-kN-jP8">
                             <rect key="frame" x="310" y="28" width="44" height="44"/>
                             <color key="backgroundColor" red="0.078431372550000003" green="0.52941176469999995" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
@@ -68,6 +74,9 @@
                             <state key="normal" title="3">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="menuButtonClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="njz-cY-bnD"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
