--- a/EventPassByResponder/HeaderView/HeaderView.xib
+++ b/EventPassByResponder/HeaderView/HeaderView.xib
@@ -28,9 +28,6 @@
                             <integer key="value" value="6"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
-                    <connections>
-                        <action selector="textfieldEditingDidEnd:" destination="iN0-l3-epB" eventType="editingDidEnd" id="4L3-W8-AWc"/>
-                    </connections>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sj9-Cc-9Mj">
                     <rect key="frame" x="314" y="27.5" width="80" height="45"/>
@@ -64,6 +61,9 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="textField" destination="OzQ-N8-gqF" id="qBW-i4-LQr"/>
+            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="160.04464285714286"/>
         </view>
     </objects>
